<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_data_collection"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.brandeis.bostonaccessibleroutes.DataCollectionActivity">


    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="45dp"
        tools:context="edu.brandeis.bostonaccessibleroutes.MapDisplayActivity" />
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        app:contentInsetStart="0dp"
        style="@style/Toolbar"
        >

        <ImageView
            android:id="@+id/content_hamburger"
            style="@style/ImageView.Hamburger"
            android:src="@drawable/ic_menu_90" />
        <edu.brandeis.bostonaccessibleroutes.widget.CanaroTextView
            style="@style/TextView.GuillotineItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textSize="@dimen/guillotine_item_text_size" />
    </android.support.v7.widget.Toolbar>

    <!--Button
        android:text="Tutorial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="60dp"
        android:id="@+id/question"
        android:background="@drawable/round_button"/-->

    <com.github.clans.fab.FloatingActionMenu
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            fab:menu_labels_ellipsize="end"
            fab:menu_labels_singleLine="false"
            fab:menu_backgroundColor="#ccffffff"
            fab:menu_labels_position="right"
        android:overScrollMode="always"
        android:id="@+id/floatingActionMenu"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fabUnevenPavement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_white_24dp"
            fab:fab_size="mini"
            fab:fab_label="@string/route_condition_uneven_pavement"
            style="@style/MenuButtonsStyle"/>

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fabHole"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_white_24dp"
            fab:fab_size="mini"
            fab:fab_label="@string/route_condition_hole"
            style="@style/MenuButtonsStyle"/>

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fabSteps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_white_24dp"
            fab:fab_size="mini"
            fab:fab_label="@string/route_condition_steps"
            style="@style/MenuButtonsStyle"/>
        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fabDebris"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_white_24dp"
            fab:fab_size="mini"
            fab:fab_label="@string/route_condition_debris"
            style="@style/MenuButtonsStyle"/>

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fabNarrowSidewalk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_white_24dp"
            fab:fab_size="mini"
            fab:fab_label="@string/route_condition_narrow_sidewalk"
            style="@style/MenuButtonsStyle"/>

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fabCurbCut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_white_24dp"
            fab:fab_size="mini"
            fab:fab_label="@string/route_condition_curve_curb"
            style="@style/MenuButtonsStyle"/>

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fabCrossSlope"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_white_24dp"
            fab:fab_size="mini"
            fab:fab_label="@string/route_condition_cross_slope"
            style="@style/MenuButtonsStyle"/>

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fabInclination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_white_24dp"
            fab:fab_size="mini"
            fab:fab_label="@string/route_condition_inclination"
            style="@style/MenuButtonsStyle"
            />



        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fabOthers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_white_24dp"
            fab:fab_size="mini"
            style="@style/MenuButtonsStyle"
            app:fab_label="@string/route_condition_others"
            />


        </com.github.clans.fab.FloatingActionMenu>


</RelativeLayout>
